# http-server

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  configuration.txt  doxygen-conf  httputils.c  httputils.h  mime.tsv  sonar-project.properties
.github/workflows/: build.yml
scripts/: script_conversor.py  script_name.py  scrypt_conversor.py
server/: CMakeLists.txt  colorcodes.h  constants.h  httpserver.c  httputils.c  httputils.h  main.c  mime.tsv  mimetable.c  mimetable.h  mimetable_test.c  picohttpparser.c  picohttpparser.h  queue.c  queue.h  queue_test.c  readconfig.c  readconfig.h  readconfig_test.c  server.c  server.cfg  server.h  uthash.h
server/test/: mimetable_test.c  mimetest.tsv  readconfig_test.c
source/: CMakeLists.txt
source/core/include/: constants.h
source/core/src/: main.c
source/httpserver/: CMakeLists.txt  httpserver.c  httpserver.h
source/httputils/: CMakeLists.txt  httputils.c  httputils.h
source/mimetable/: CMakeLists.txt  mimetable.c
source/picohttpparser/: CMakeLists.txt  picohttpparser.c  picohttpparser.h
source/queue/: CMakeLists.txt
source/readconfig/: CMakeLists.txt  readconfig.c  readconfig.h
source/server/: CMakeLists.txt  server.c  server.h
source/test/: mimetable_test.c  queue_test.c  readconfig_test.c
source/uthash/: CMakeLists.txt
